Fix CSS
- Fixed CSS for header, search box and table.
- Truncate fellow and partner names which are too long to fit on a single line in the table
- Added fellow and partner names as tooltips for names which are too long

[#164128897]

--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -4,8 +4,7 @@
   flex-flow: row wrap;
   justify-content: space-between;
   align-items: center;
-  height: 7vh;
-  padding: 30px;
+  padding: 10px 30px;
 
   .brand {
     a {
@@ -25,9 +24,9 @@
     position: relative;
     display: flex;
     .user-name {
-      position: relative;
-      top: 5px; 
-      color: rgb(110, 135, 238);
+      display: flex;
+      align-items: center;
+      color: #fff;
       font-size: 20px;
       padding-right: 15px;
     }
